move img to file

--- a/interface1.html
+++ b/interface1.html
@@ -14,7 +14,7 @@
 
         <div id="grunt">
           <div class="gruntpic">
-            <img src="grunt.png" alt="Grunt plugin" width="100" height="auto" class="center">
+            <img src="img/grunt.png" alt="Grunt plugin" width="100" height="auto" class="center">
           </div>
             <h2>Grunt plugin</h2>
             <span>Install the</span> 
@@ -25,7 +25,7 @@
 
         <div id="gulp">
           <div class="gulppic">
-            <img src="gulp.png" alt="Gulp plugin" width="60" height="100" class="center">
+            <img src="img/gulp.png" alt="Gulp plugin" width="60" height="100" class="center">
           </div>
             <h2>Gulp plugin</h2>
             <span>install </span><span class="font-diff">surge</span><span> as a <br>devDependency, and you're<br>ready to use it in your Gulpfile.</span>
@@ -33,7 +33,7 @@
 
         <div id="git">
           <div class="githookpic">
-            <img src="githook.png" alt="Git Hooks" width="120" height="100" class="center">
+            <img src="img/githook.png" alt="Git Hooks" width="120" height="100" class="center">
           </div>
           
             <h2>Git Hooks</h2>
@@ -42,7 +42,7 @@
     
         <div id="npm">
           <div class="npmpic">
-            <img class="npm-pic" src="npm_software_logo.png" alt="npm run scripts" width="120" height="100" class="center">
+            <img class="npm-pic" src="img/npm_software_logo.png" alt="npm run scripts" width="120" height="100" class="center">
           </div>
             <h2>npm run scripts</h2>
             <span>Insteall the Surge <span class="smallerfont">CLI</span> <span>tool, and <br>your project is ready to use in <br>your </span><span class="font-diff">package.json.</span>
