--- a/interface2.html
+++ b/interface2.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="chart">
-            <img src="img/chart.png" alt="chart" width="auto" height="auto" class="center">
+            <img src="img/chart.png" alt="chart" width="auto" height="auto">
         </div>
 
         <!-- first half end -->
