interface 3 first commit

--- a/redointerface2.html
+++ b/redointerface2.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     
-    <!-- <div class="mockup">
-    </div> -->
+    <div class="mockup">
+    </div> 
 
     <!-- image building start -->
     <div class="widget">
